# s2mflow

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  Cargo.toml  LICENSE  README.md  example_script.py  pyproject.toml  test_run.py
.github/workflows/: ci.yml  release.yml
data/: benchmark_results.txt
data/net_instance_1/: netgen_1.min  netgen_1_10.mcfmin  netgen_1_2.mcfmin  netgen_1_5.mcfmin
data/net_instance_2/: netgen_2.min  netgen_2_10.mcfmin  netgen_2_2.mcfmin  netgen_2_5.mcfmin
data/net_instance_3/: netgen_3.min  netgen_3_10.mcfmin  netgen_3_2.mcfmin  netgen_3_5.mcfmin
data/net_instance_4/: netgen_4.min  netgen_4_10.mcfmin  netgen_4_2.mcfmin  netgen_4_5.mcfmin
docs/: requirements.txt
docs/source/: api.rst  conf.py  format.md  index.rst  workflows.md
examples/: benchmark.py  demo.py  exp_network.min  solve_instance_gurobi.py  solve_instance_pyomo.py  spread.mcfmin  spread_rand_caps.mcfmin  spread_rand_caps_costs.mcfmin  spread_rand_costs.mcfmin  uniform.mcfmin
s2mflow/: __init__.py  s2mflow.pyi
src/: lib.rs  models.rs  utils.rs
src/logic/: generator.rs
tests/: conftest.py  test_dummy.py  test_partition_logic.py  test_partition_logic.rs  test_round_trip.py  test_round_trip.rs  test_round_trip_small.py  test_sanity.rs
